apps/todo-list/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list
  labels:
    app: todo-list
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-list
  template:
    metadata:
      labels:
        app: todo-list
    spec:
      containers:
      - name: todo-list
        image: ghcr.io/ydeyeq/getting-started-todo-app:main
        ports:
        - containerPort: 3000


---


apiVersion: v1
kind: Service
metadata:
  name: todo-list
  namespace: default
spec:
  selector:
    app: todo-list
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000


# ---


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: todo-list-ingress
#   # annotations:
#   #   nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: todo-list.ydeyeq.duckdns.org
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: todo-list
#             port:
#               number: 80


# ---


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: assets-api-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /assets
#         pathType: Prefix
#         backend:
#           service:
#             name: todo-list
#             port:
#               number: 80
#       - path: /api
#         pathType: Prefix
#         backend:
#           service:
#             name: todo-list
#             port:
#               number: 80
