apps/todo-list/unified-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /todo-list
        pathType: Prefix
        backend:
          service:
            name: todo-list
            port:
              number: 80
      - path: /http-docker
        pathType: Prefix
        backend:
          service:
            name: http-docker
            port:
              number: 80
      - path: /node-app
        pathType: Prefix
        backend:
          service:
            name: node-app
            port:
              number: 80
